--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input type="text" id="searchInput" placeholder="Search events by title or date...">
     </div>
 </header>
-
+<main>
 <!-- FILTERS -->
 <div class="filters">
     <select id="categoryFilter">
@@ -53,7 +53,7 @@
     <button onclick="prevPage()">Previous</button>
     <button onclick="nextPage()">Next</button>
 </div>
-
+</main>
 <!-- FOOTER -->
 <footer>
     <p>Contact: +91 98765 43210 | info@northviewcollege.edu</p>
